NetBSD Problem Report #42759

From www@NetBSD.org  Sun Feb  7 00:40:25 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1101B63B9FC
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  7 Feb 2010 00:40:25 +0000 (UTC)
Message-Id: <20100207004024.DA75D63B886@www.NetBSD.org>
Date: Sun,  7 Feb 2010 00:40:24 +0000 (UTC)
From: michael+netbsd@stapelberg.de
Reply-To: michael+netbsd@stapelberg.de
To: gnats-bugs@NetBSD.org
Subject: amdpm(4) does not attach the smbus on AMD768 chips
X-Send-Pr-Version: www-1.0

>Number:         42759
>Category:       kern
>Synopsis:       amdpm(4) does not attach the smbus on AMD768 chips
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 07 00:45:00 +0000 2010
>Closed-Date:    Sun Feb 07 20:57:21 +0000 2010
>Last-Modified:  Sun Feb 07 21:00:03 +0000 2010
>Originator:     Michael Stapelberg
>Release:        5.0.1
>Organization:
>Environment:
NetBSD  5.0.1 NetBSD 5.0.1 (FLOBIMVRO) #19: Sun Feb  7 01:20:34 CET 2010  root@:/usr/src/sys/arch/i386/compile/FLOBIMVRO i386
>Description:
The amdpm(4) driver does not attach the smbus, thus drivers using i2c cannot be used.
>How-To-Repeat:
Load amdpm, notice that there is no iic0
>Fix:
Index: pci/amdpm.c
===================================================================
RCS file: /cvsroot/src/sys/dev/pci/amdpm.c,v
retrieving revision 1.30
diff -u -r1.30 amdpm.c
--- pci/amdpm.c 28 Apr 2008 20:23:54 -0000      1.30
+++ pci/amdpm.c 7 Feb 2010 00:37:46 -0000
@@ -156,6 +156,7 @@

        /* try to attach devices on the smbus */
        if (PCI_PRODUCT(pa->pa_id) == PCI_PRODUCT_AMD_PBC8111_ACPI ||
+           PCI_PRODUCT(pa->pa_id) == PCI_PRODUCT_AMD_PBC768_PMC ||
            sc->sc_nforce) {
                amdpm_smbus_attach(sc);
        }

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sun, 07 Feb 2010 20:57:21 +0000
Responsible-Changed-Why:
I imported the suggested fix


State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sun, 07 Feb 2010 20:57:21 +0000
State-Changed-Why:
Fix imported


From: Paul Goyette <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42759 CVS commit: src/sys/dev/pci
Date: Sun, 7 Feb 2010 20:55:46 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Sun Feb  7 20:55:46 UTC 2010

 Modified Files:
 	src/sys/dev/pci: amdpm.c

 Log Message:
 Recognize the i2c bus on the AMD768 PCI-ISA/LPC Bridge

 Resolves PR/42759 - thanks Michael Stapelberg


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/dev/pci/amdpm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.