Recognize the i2c bus on the AMD768 PCI-ISA/LPC Bridge

Resolves PR/42759 - thanks Michael Stapelberg